# openphotos

./: .gitignore  LICENSE  README.md  pyproject.toml
open photos/: cli.py
openphotos/: cli.py
