[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openphotos"
version = "0.1.0"
description = "A dead-simple CLI to download your full iCloud Photos library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "icloudpd",
]

[project.scripts]
openphotos = "openphotos.cli:main"

[tool.setuptools]
packages = ["openphotos"]
